--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 
     <div class = "container">
         <div class = "row">
-            <div class = "col-md-12 jumbotron text-center bg-dark text-white">
+            <div class = "col-md-12 jumbotron text-center">
                 <h1>Belly Button Biodiversity Dashboard</h1>
                 <p>Use the interactive charts below to explore the dataset.</p>
             </div>
@@ -54,7 +54,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="{{ url_for('static', filename='js/bonus.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/app.js' }}"></script>
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
