--- a/templates/index.html
+++ b/templates/index.html
@@ -16,35 +16,35 @@
 
     <div class = "container">
         <div class = "row">
-            <div class = "col-md-12 jumbotron text-center">
+            <div class = "col-md-12 jumbotron text-center bg-dark text-white">
                 <h1>Belly Button Biodiversity Dashboard</h1>
                 <p>Use the interactive charts below to explore the dataset.</p>
             </div>
         </div>
 
         <div class = "row">
-            <div class = "col-md-2">
+            <div class = "col-12 col-md-2">
                 <div class = "well">
                     <h5>SELECT Sample:</h5>
                     <select id="selDataset" onchange="optionChanged(this.value)"></select>
                 </div>
-                <div class = "panel panel-primary">
-                    <div class = "panel-heading">
-                        <h3 class = "panel-title">Sample Metadata</h3>
+                <div class = "card card-primary">
+                    <div class = "card-header">
+                        <h3 class = "card-title">Sample Metadata</h3>
                     </div>
-                    <div id="sample-metadata" class = "panel-body"></div>
+                    <div id="sample-metadata" class = "card-body"></div>
                 </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-12 col-md-5">
                 <div id="pie"></div>
             </div>
-            <div class="col-md-5">
+            <div class="col-12 col-md-5">
                 <div id="gauge"></div>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-12 col-md-12">
                 <div id="bubble"></div>
             </div>
         </div>
