--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 
         <div class = "row">
             <div class = "col-12 col-md-2">
-                <div class = "well">
+                <div class = "card">
                     <h5>SELECT Sample:</h5>
                     <select id="selDataset" onchange="optionChanged(this.value)"></select>
                 </div>
